--- a/src/app/componentes/login/login.html
+++ b/src/app/componentes/login/login.html
@@ -20,6 +20,12 @@
         </ng-container>
       </button>
 
+      <div style="margin-bottom: 16px;">
+        <button mat-raised-button color="primary" type="button" (click)="autofill('paciente')">Paciente</button>
+        <button mat-raised-button color="accent" type="button" (click)="autofill('especialista')">Especialista</button>
+        <button mat-raised-button color="warn" type="button" (click)="autofill('admin')">Administrador</button>
+      </div>
+
       <div *ngIf="loading" class="loader">Cargando...</div>
     </form>
   </mat-card>
