--- a/src/app/componentes/admin-usuarios/admin-usuarios.scss
+++ b/src/app/componentes/admin-usuarios/admin-usuarios.scss
@@ -1,8 +1,18 @@
+.admin-usuarios-container {
+  background: var(--bg-color);
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  color: var(--text-color);
+}
+
 table {
     width: 100%;
     margin-top: 1rem;
 }
 
-button {
+.botonRegistrar {
+    margin-top: 1rem;
     margin-left: 0.5rem;
 }
