--- a/src/app/componentes/login/login.scss
+++ b/src/app/componentes/login/login.scss
@@ -7,6 +7,19 @@
     padding: 1rem;
 }
 
+/*.login-container {
+    background: url('/assets/clinica.jpg') no-repeat center center fixed;
+    background-size: cover;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    color: var(--text-color);
+}*/
+
 .login-card {
     width: 100%;
     max-width: 400px;
@@ -37,4 +50,20 @@
     margin-top: 1rem;
     font-size: 1.2rem;
     color: var(--text-color);
+}
+
+.autofill-btn-group {
+    display: flex;
+    gap: 0.75rem;
+    justify-content: center;
+    margin-top: 1rem;
+    margin-bottom: 16px;
+
+    button.selected {
+        background-color: #8e24aa !important;
+        color: #fff !important;
+        box-shadow: 0 0 0 2px #8e24aa44;
+        font-weight: 700;
+        transition: background 0.2s;
+    }
 }
