--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,26 +23,29 @@ body {
 
 :root {
     --text-color: #000;
+    --bg-color: #f5f5f5;
     --card-bg: rgba(255, 255, 255, 0.85);
-    --button-bg: #3f51b5;
-    --button-accent: #e91e63;
+    --button-bg: #90caf9;
+    --button-accent: #f48fb1;
     --shadow: rgba(0, 0, 0, 0.3);
 }
 
-@media (prefers-color-scheme: dark) {
+body.dark-mode {
+    --text-color: #fff;
+    --bg-color: #181818;
+    --card-bg: rgba(0, 0, 0, 0.75);
+    --button-bg: #3f51b5;
+    --button-accent: #e91e63;
+    --shadow: rgba(255, 255, 255, 0.1);
+}
+
+/*@media (prefers-color-scheme: dark) {
     :root {
         --text-color: #fff;
+        --bg-color: #181818;
         --card-bg: rgba(0, 0, 0, 0.75);
         --button-bg: #90caf9;
         --button-accent: #f48fb1;
         --shadow: rgba(255, 255, 255, 0.1);
     }
-}
-
-body.dark-mode {
-    --text-color: #fff;
-    --card-bg: rgba(0, 0, 0, 0.75);
-    --button-bg: #90caf9;
-    --button-accent: #f48fb1;
-    --shadow: rgba(255, 255, 255, 0.1);
-}
+}*/
